@@ -27,6 +27,10 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-mail")
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation("jakarta.servlet:jakarta.servlet-api") // Explicitly add Jakarta Servlet API
+
+
+
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework.security:spring-security-test")
     developmentOnly("org.springframework.boot:spring-boot-devtools")
@@ -118,12 +122,7 @@ tasks.withType<JavaCompile> {
         isIncremental = true
         isFork = true
         encoding = "UTF-8"
-        compilerArgs.add("--enable-preview")
     }
-}
-
-tasks.withType<Test> {
-    jvmArgs("--enable-preview")
 }
 
 tasks.register<BootRun>("bootRunE2E") {
